--- a/LMS/Views/Web.config
+++ b/LMS/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="LMS" />
+        <add namespace="LMS.Extensions" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
