--- a/LMS/LMS.csproj
+++ b/LMS/LMS.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MembersController.cs" />
     <Compile Include="Controllers\MembershipsController.cs" />
+    <Compile Include="Controllers\OldBooks.cs" />
     <Compile Include="Controllers\PressController.cs" />
     <Compile Include="Controllers\PublishersController.cs" />
     <Compile Include="Extensions\IdentityExtensions.cs" />
@@ -386,6 +387,11 @@
     <Content Include="Views\Reports\OldBooks.cshtml" />
     <Content Include="Views\Reports\InactiveMembers.cshtml" />
     <Content Include="Views\Reports\InactiveBooks.cshtml" />
+    <Content Include="Views\OldBooks\Create.cshtml" />
+    <Content Include="Views\OldBooks\Delete.cshtml" />
+    <Content Include="Views\OldBooks\Details.cshtml" />
+    <Content Include="Views\OldBooks\Edit.cshtml" />
+    <Content Include="Views\OldBooks\Index.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
