--- a/LMS/LMS.csproj
+++ b/LMS/LMS.csproj
@@ -382,11 +382,11 @@
     <Content Include="Views\BookCopies\Edit.cshtml" />
     <Content Include="Views\BookCopies\Index.cshtml" />
     <Content Include="Views\Members\LoanDetail.cshtml" />
-    <Content Include="Views\BookCopies\ViewCopyLoan.cshtml" />
     <Content Include="Views\Loans\Return.cshtml" />
     <Content Include="Views\Reports\OldBooks.cshtml" />
     <Content Include="Views\Reports\InactiveMembers.cshtml" />
     <Content Include="Views\Reports\InactiveBooks.cshtml" />
+    <Content Include="Views\Shared\LoginLayout.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
